--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,26 +4,23 @@ on:
   push:
     branches:
       - sai-gif
-  pull_request:
-    branches:
-      - sai-gif
 
 jobs:
   lint:
-    name: Lint
+    name: Code Linting
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Set up Node.js
+        
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 14
-
+          node-version: '14'
+          
       - name: Install dependencies
         run: npm install
-
+        
       - name: Run ESLint
-        run: npx eslint
+        run: npm run lint
