--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,23 +4,26 @@ on:
   push:
     branches:
       - sai-gif
+  pull_request:
+    branches:
+      - sai-gif
 
 jobs:
   lint:
-    name: Code Linting
+    name: Lint
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
-        
-      - name: Setup Node.js
+
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
-          
+          node-version: 14
+
       - name: Install dependencies
         run: npm install
-        
+
       - name: Run ESLint
-        run: npm run lint
+        run: npx eslint
