--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "type": "git",
     "url": "https://github.com/Jeevan-369/ci-cd.git"
   },
-  "author": "Jeevan Tubinakere Govindaraju",
+  "author": "Jeevan",
   "license": "TWA",
   "devDependencies": {
     "eslint": "^8.6.0",
     "jest": "^27.4.7"
   },
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1"
+  }
 }
