--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jest": "^27.4.7"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react-router-dom": "^5.2.0"
   }
 }
