--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.1",
+    "express-fileupload": "^1.5.0",
     "pg": "^8.11.3"
   },
   "keywords": []
